@@ -4,9 +4,12 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-CLIENT="Client"
-FORCE LOGOUT USER="Force Logout User"
-MOD_LOGGED="mod_logged"
-THIS MODULE SHOWS A LIST OF THE CURRENTLY LOGGED IN USERS="This Module shows a list of the currently Logged In Users"
-LAST ACTIVITY="Last Activity"
-ACTIVITY HOURS="%.1f hours ago"
+
+LOGGED IN USERS="Logged in users"
+MOD_LOGGED_EDIT_USER="Edit user"
+MOD_LOGGED_LAST_ACTIVITY="Last Activity"
+MOD_LOGGED_LAST_ACTIVITY_HOURS="%.1f hours ago"
+MOD_LOGGED_GROUP="Group"
+MOD_LOGGED_USERNAME="Name"
+MOD_LOGGED_LOGOUT="Logout"
+MOD_LOGGED_XML_DESCRIPTION="This Module shows a list of the currently Logged In Users"
