@@ -11,7 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.6.0</version>
-	<description>This module shows a list of the currently logged in users</description>
+	<description>MOD_LOGGED_XML_DESCRIPTION</description>
 	<files>
 		<filename module="mod_logged">mod_logged.php</filename>
 		<filename>index.html</filename>
