@@ -34,6 +34,7 @@ $ -> Language fix or change
 07-Feb-2010 Jean-Marie Simonet
 ^ Refactored mod_feed site and admin modules ini/keys. Enabled desc translation in com_modules select.
 ^ Refactored mod_latest ini/keys
+^ Refactored mod_logged ini/keys + added some
 
 06-Feb-2010 Mark Dexter
 + Test Commit (remove later)
